--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,7 @@ params:
   knitr::opts_chunk$set(echo = params$date)
 ```
 
-# Trends in COVID-19 for counties in the U.S. state of Massachusetts
-
+```{r header, results = 'asis'}
+cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts (updated on ", params$date, ")\n"))
+```
 ![trends in covid-19 cases by county in U.S. state of massachusetts](./images/ma_county_covid.png)
