--- a/README.Rmd
+++ b/README.Rmd
@@ -7,7 +7,7 @@ params:
 ---
 
 ```{r setup, include = FALSE}
-  knitr::opts_chunk$set(echo = TRUE)
+  knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ```{r header, results = 'asis'}
