--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,10 @@ cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts
 
 ![trends in covid-19 cases by county in U.S. state of massachusetts](./images/ma_county_covid.png)
 
+# Bristol County
+
+![trends in covid-19 cases for bristol county in U.S. state of massachusetts](./images/bristol_county_covid.png)
+
 ## Credits
 
 Data on COVID-19 provided by The New York Times. Many thanks to the New York Times for making this invaluable resource publicly available!
