--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts
 
 ![trends in covid-19 cases by county in U.S. state of massachusetts](./images/ma_county_covid.png)
 
-# Bristol County
+## Bristol County
 
 ![trends in covid-19 cases for bristol county in U.S. state of massachusetts](./images/bristol_county_covid.png)
 
