--- a/README.Rmd
+++ b/README.Rmd
@@ -22,4 +22,4 @@ cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts
 
 ## Credits
 
-Data on COVID-19 provided by The New York Times. Many thanks to the New York Times for making this invaluable resource publicly available!
+Data on COVID-19 provided by The New York Times. Many thanks to the New York Times for making this invaluable resource publicly available! Inspiration for this example was taken from [MinutePhysics](https://www.youtube.com/watch?v=54XLXg4fYsc) and [Aatish Bhatia](http://aatishb.com/covidtrends/).
