--- a/README.Rmd
+++ b/README.Rmd
@@ -14,11 +14,12 @@ params:
 cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts (updated on ", params$date, ")\n"))
 ```
 
-![trends in covid-19 cases by county in U.S. state of massachusetts](./images/ma_county_covid.png)
+![trends in covid-19 cases by county in the U.S. state of massachusetts](./images/ma_county_covid.png)
 
 ## Bristol County
 
-![trends in covid-19 cases for bristol county in U.S. state of massachusetts](./images/bristol_county_covid.png)
+| Log        | Linear           | 
+| ![trends in covid-19 cases for bristol county in the U.S. state of massachusettson on a log scale](./images/bristol_county_covid_log.png) | ![trends in covid-19 cases for bristol county in the U.S. state of massachusetts on a linear scale](./images/bristol_county_covid_linear.png) |
 
 ## Credits
 
