--- a/README.Rmd
+++ b/README.Rmd
@@ -15,13 +15,72 @@ cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts
 ```
 
 ![trends in covid-19 cases by county in the U.S. state of massachusetts](./images/ma_county_covid.png)
+## Barnstable County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for barnstable county in the U.S. state of massachusettson on a log scale](./images/barnstable_county_covid_log.png) | ![trends in covid-19 cases for barnstable county in the U.S. state of massachusetts on a linear scale](./images/barnstable_county_covid_linear.png) |## Berkshire County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for berkshire county in the U.S. state of massachusettson on a log scale](./images/berkshire_county_covid_log.png) | ![trends in covid-19 cases for berkshire county in the U.S. state of massachusetts on a linear scale](./images/berkshire_county_covid_linear.png) |
 
 ## Bristol County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for bristol county in the U.S. state of massachusettson on a log scale](./images/bristol_county_covid_log.png) | ![trends in covid-19 cases for bristol county in the U.S. state of massachusetts on a linear scale](./images/bristol_county_covid_linear.png) |
 
-| Log  | Linear |
-| ------------- | ------------- | 
-| ![trends in covid-19 cases for bristol county in the U.S. state of massachusettson on a log scale](./images/bristol_county_covid_log.png) | ![trends in covid-19 cases for bristol county in the U.S. state of massachusetts on a linear scale](./images/bristol_county_covid_linear.png) |
+## Essex County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for essex county in the U.S. state of massachusettson on a log scale](./images/essex_county_covid_log.png) | ![trends in covid-19 cases for essex county in the U.S. state of massachusetts on a linear scale](./images/essex_county_covid_linear.png) |
 
-## Credits
+## Franklin County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for franklin county in the U.S. state of massachusettson on a log scale](./images/franklin_county_covid_log.png) | ![trends in covid-19 cases for franklin county in the U.S. state of massachusetts on a linear scale](./images/franklin_county_covid_linear.png) |
 
-Data on COVID-19 provided by The New York Times. Many thanks to the New York Times for making this invaluable resource publicly available! Inspiration for this example was taken from [MinutePhysics](https://www.youtube.com/watch?v=54XLXg4fYsc) and [Aatish Bhatia](http://aatishb.com/covidtrends/).
+## Hampton County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for hampton county in the U.S. state of massachusettson on a log scale](./images/hampton_county_covid_log.png) | ![trends in covid-19 cases for hampton county in the U.S. state of massachusetts on a linear scale](./images/hampton_county_covid_linear.png) |
+
+## Hampshire County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for hampshire county in the U.S. state of massachusettson on a log scale](./images/hampshire_county_covid_log.png) | ![trends in covid-19 cases for hampshire county in the U.S. state of massachusetts on a linear scale](./images/hampshire_county_covid_linear.png) |
+
+## Middlesex County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for middlesex county in the U.S. state of massachusettson on a log scale](./images/middlesex_county_covid_log.png) | ![trends in covid-19 cases for middlesex county in the U.S. state of massachusetts on a linear scale](./images/middlesex_county_covid_linear.png) |
+
+## Norfolk County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for norfolk county in the U.S. state of massachusettson on a log scale](./images/norfolk_county_covid_log.png) | ![trends in covid-19 cases for norfolk county in the U.S. state of massachusetts on a linear scale](./images/norfolk_county_covid_linear.png) |
+
+## Plymouth County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for plymouth county in the U.S. state of massachusettson on a log scale](./images/plymouth_county_covid_log.png) | ![trends in covid-19 cases for plymouth county in the U.S. state of massachusetts on a linear scale](./images/plymouth_county_covid_linear.png) |
+
+## Suffolk County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for suffolk county in the U.S. state of massachusettson on a log scale](./images/suffolk_county_covid_log.png) | ![trends in covid-19 cases for suffolk county in the U.S. state of massachusetts on a linear scale](./images/suffolk_county_covid_linear.png) 
+
+## Worcester County
+ 
+ | Log  | Linear |
+ | ------------- | ------------- | 
+ | ![trends in covid-19 cases for worcester county in the U.S. state of massachusettson on a log scale](./images/worcester_county_covid_log.png) | ![trends in covid-19 cases for worcester county in the U.S. state of massachusetts on a linear scale](./images/worcester_county_covid_linear.png) |
