--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,8 @@ md_txt = function(i) {
     
     # md text
     paste0(
-      '## ', i, ' County ![', tolower(i), ' cdc community badge](https://img.shields.io/badge/CDC%20Community%20Level-', cty_cdc, '-', cty_level,
+      '## ', i, ' County\n', 
+      '![', tolower(i), ' cdc community badge](https://img.shields.io/badge/CDC%20Community%20Level-', cty_cdc, '-', cty_level,
       '\n',
       '| Log  | Linear |\n',
       '| ------------- | ------------- |\n',
