--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ md_txt = function(i) {
     paste0(
       '| ', gsub(' ', '', cty_cdc$state_abb), ' | ', i, ' | ', 
       '[![', tolower(i), ' cdc community badge](https://img.shields.io/badge/COVID--19%20Community%20Level-', cty_cdc$covid.19_community_level, '-', cty_cdc$community_level, '.svg)](https://www.cdc.gov/coronavirus/2019-ncov/science/community-levels.html)<br />(updated on ', cty_cdc$date_community,') | ',
-      '[![', tolower(cty_cdc$county), ' cdc transmission badge](https://img.shields.io/badge/CDC%20Transmission%20Level-', str_to_title(cty_cdc$community_transmission_level), '-', cty_cdc$transmission_level, '.svg)](https://covid.cdc.gov/covid-data-tracker/#county-view?list_select_state=Massachusetts&data-type=Risk)<br />(updated on ', cty_cdc$date_transmission,') |\n'
+      '[![', tolower(cty_cdc$county), ' cdc transmission badge](https://img.shields.io/badge/CDC%20Transmission%20Level-', str_to_title(cty_cdc$community_transmission_level), '-', cty_cdc$transmission_level, '.svg)](https://covid.cdc.gov/covid-data-tracker/#county-view?list_select_state=Massachusetts&data-type=Risk&list_select_county=', cty_cdc$fips_code, ')<br />(updated on ', cty_cdc$date_transmission,') |\n'
     )
   
 }
