--- a/README.Rmd
+++ b/README.Rmd
@@ -47,7 +47,7 @@ md_txt = function(i) {
 ```
 
 ```{r header, results = 'asis'}
-cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts (updated on ", params$date, ")\n"))
+cat(paste0("# Trends in COVID-19 for counties in the U.S. state of Massachusetts, excluding the Islands (updated on ", params$date, ")\n"))
 ```
 
 ![trends in covid-19 cases by county in the U.S. state of massachusetts](./images/ma_county_covid.png)
